<resources>
    <string name="app_name">LoginForm</string>
    <string name="DetailTitme">什么是Android操作系统</string>
    <string name="DetailDate">2018-11-2</string>
    <string name="DetailContent">Android是一种基于Linux的自由及开放源代码的操作系统，主要使用于移动设备，如智能手机和平板电脑，由Google公司和开放手机联盟领导及开发。</string>
    <string name="BtnReply">回复</string>
    <string name="BtnRew">转发</string>
    <string name="Title">标题</string>
    <string name="Content">内容</string>
    <string name="ReplyTitle">请输入回复内容的标题</string>
    <string name="ReplyContent">请输入需要回复的具体正文内容</string>
    <string name="emailaddr">abc@sample.com</string>
    <string name="BmiTitle">BMI计算器</string>
    <string name="BtnCalc">计算</string>
    <string name="Result">结论</string>
    <string name="BodyHeight">身高（米）</string>
    <string name="BodyWeight">体重（公斤）</string>
    <string name="STD_WHO">WHO标准</string>
    <string name="STD_ASIA">亚洲标准</string>
    <string name="STD_CHN">中国标准</string>
    <string name="LblDisplayBMI">显示BMI</string>
    <string name="LblDisplayResult">显示体型结论</string>
    <string name="LblDisplayBoth">两者均显示</string>
    <string name="LblLogin">用户登录</string>
    <string name="LblUserName">用户名</string>
    <string name="LblPassword">密码</string>
    <string name="LblLoginByUserName">用户名登录</string>
    <string name="LblLoginByEmail">邮箱地址登录</string>
    <string name="LbRememberMe">记住登录状态</string>
    <string name="LblBtnLogin">登录</string>
    <string name="Notice">提示</string>
    <string name="RegByEmail">用邮箱注册</string>
    <string name="RegByUserName">用户名注册</string>
    <string name="RegByMobile">手机号注册</string>
    <string name="Reg">注册</string>
    <string name="RegOption">注册选项</string>
    <string name="LblLicense">注册新用户需要接收APP用户协议的约束，请详细查阅用户协议条款，并确认是否接受用户协议。</string>
    <string name="BtnConfirm">确认</string>
    <string name="CbLicense">同意接受APP用户协议</string>
    <string name="TxtUserLicense">1、用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表APP的观点、立场或政策，APP对此不承担任何责任。 \n2、用户不得利用“APP”账号或本服务进行如下行为：\n    (1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的；\n    (2) 强制、诱导其他用户关注、点击链接页面或分享信息的；\n    (3) 虚构事实、隐瞒真相以误导、欺骗他人的；\n    (4) 利用技术手段批量建立虚假账号的；\n    (5) 利用“APP”账号或本服务从事任何违法犯罪活动的；\n    (6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；\n    (7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“APP”正常运营或服务未明示授权的行为。\n3、用户须对利用“APP”账号或本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与APP无关。  如因此给APP或第三方造成损害的，用户应当依法予以赔偿。\n4、APP提供的服务中可能包括广告，用户同意在使用过程中显示APP和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依该广告信息进行的交易负责，  对用户因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，APP不承担任何责任。</string>
</resources>
