<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtLicense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/TxtUserLicense" />

    <CheckBox
        android:id="@+id/cbConfirmLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CbLicense" />

    <Button
        android:id="@+id/btnConfirmLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BtnConfirm" />
</LinearLayout>
